--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 .docker/
 *.log
 
-# Project files (user should decide what to track)
-projects/
-
 # OS files
 .DS_Store
 Thumbs.db
@@ -18,3 +15,4 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+*.pyc
